# e4docker

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  icon.rc  icon.res  nohup.out
config/: brave.conf  ceiar.conf  e4docker.conf  edge.conf  generic.conf  terminal.conf
locales/: en.txt  it.txt
src/: e4button.rs  e4command.rs  e4config.rs  e4icon.rs  e4initialize.rs  e4processes.rs  lib.rs  main.rs  translations.rs
