[package]
name = "e4docker"
version = "0.2.0"
edition = "2021"
authors = [ "Dorian Soru <doriansoru@gmail.com>"]
license = "GPL-3.0"
description = "A simple docker for your favorite apps, written in Rust"

[dependencies]
configparser = "3.1.0"
dirs = "5.0.1"
fltk  = "^1.4"
round = "0.1.2"
image = "0.25.5"
fltk-grid = "0.4.1"
base64 = "0.22.1"
pelite = "0.10.0"

[package.metadata.winres]
OriginalFilename = "e4docker.exe"
LegalCopyright = "Copyright 2024, Dorian Soru"
FileDescription = "A simple docker for your favorite apps, written in Rust"
ProductName = "E4Docker"
