[package]
name = "e4docker"
version = "0.4.0"
edition = "2021"
authors = [ "Dorian Soru <doriansoru@gmail.com>"]
license = "GPL-3.0"
description = "A simple docker for your favorite apps, written in Rust"

[dependencies]
configparser = "3"
dirs = "5"
fltk  = "^1.4"
round = "0.1"
image = "0.25"
fltk-grid = "0.4"
base64 = "0.22"
pelite = "0.10"

[package.metadata.winres]
OriginalFilename = "e4docker.exe"
LegalCopyright = "Copyright 2024, Dorian Soru"
FileDescription = "A simple docker for your favorite apps, written in Rust"
ProductName = "E4Docker"
